Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Average_Review_Score__c</fullName>
        <formula>Total_Review_Score__c  /  Total_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Review Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competency_Rating__c</fullName>
        <formula>IF( Average_Review_Score__c &lt;3,&quot;Not qualified&quot;, IF( Average_Review_Score__c &lt;3.75,&quot;Minimally qualified&quot;, IF( Average_Review_Score__c &lt;4.75,&quot;qualified&quot;,&quot;highly qualified&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competency Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_CulturalFit__c</fullName>
        <label>Max_CulturalFit</label>
        <summarizedField>Review__c.Cultural_Fit__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_job_app__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of job app</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF( Average_Review_Score__c &gt;=3.5,  IMAGE(&quot;https://ap1.salesforce.com/015900000003Fjp&quot;,&quot;Green&quot;) , IF( Average_Review_Score__c &gt;=2.5, IMAGE(&quot;https://c.ap1.content.force.com/servlet/servlet.ImageServer?id=015900000003Fjp&amp;oid=00D90000000bN6K&amp;lastMod=1323405293000&quot;,&quot;yellow&quot;), IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;red&quot;)  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Interviews completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Review_Score__c</fullName>
        <label>Total Review Score</label>
        <summarizedField>Review__c.Overall_Score__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reviews__c</fullName>
        <label>Total Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_no_of_reviews__c</fullName>
        <label>Total no of reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supervisor</fullName>
        <active>true</active>
        <label>Supervisor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Share__c</fullName>
        <label>Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>No_Delete_or_Insert_Reviews</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Status__c ,&quot;Approved&quot;), ISCHANGED( Total_Reviews__c )  )</errorConditionFormula>
        <errorMessage>Change of reviews not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RoleName_Required</fullName>
        <active>true</active>
        <description>RoleName_Required</description>
        <errorConditionFormula>ISBLANK( Role__c )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Role Name is mandatory.</errorMessage>
    </validationRules>
</CustomObject>